--- a/content/post/2021-02-11-include-first-html-widget/index.en.Rmd
+++ b/content/post/2021-02-11-include-first-html-widget/index.en.Rmd
@@ -10,7 +10,7 @@ tags:
   - widgetframe
 lastmod: '2021-02-11T20:06:56-06:00'
 keywords: []
-description: 'One of the continuing frustrations in programming is the large volume of information that is required to achieve seemingly simple things.  For example, the casual reader does not grasp the technical requirements of embedding a map. That is where html widgets come into play.'
+description: ''
 comment: no
 toc: yes
 autoCollapseToc: no
@@ -33,7 +33,7 @@ output:
     toc: true
 ---
 
-One of the continuing frustrations in programming is the large volume of information that is required to achieve seemingly simple things.  For example, the casual reader does not grasp the technical requirements of embedding a map. That's where html widgets come into play.
+One of the continuing annoyances in programming is the large volume of information that is required to achieve seemingly simple things.  For example, the casual reader does not grasp the technical requirements of embedding a map. That's where html widgets come into play.
 
 # html widgets
 
